--- a/src/api/package.json
+++ b/src/api/package.json
@@ -13,7 +13,9 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "@trpc/server": "^10.45.0",
+    "@trpc/express": "^10.45.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
@@ -29,13 +31,7 @@
   "jest": {
     "preset": "ts-jest",
     "testEnvironment": "node",
-    "moduleFileExtensions": [
-      "ts",
-      "js",
-      "json"
-    ],
-    "testMatch": [
-      "**/__tests__/**/*.test.ts"
-    ]
+    "moduleFileExtensions": ["ts", "js", "json"],
+    "testMatch": ["**/__tests__/**/*.test.ts"]
   }
 }
