--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -2,16 +2,16 @@
     "name": "frontend",
     "private": true,
     "type": "module",
-    "scripts": {
+"scripts": {
   "dev": "vite",
   "build": "vite build",
   "preview": "vite preview --port 5174",
-  "test": "run-p lint vitest",
+  "test": "npm run lint && vitest",
   "test:watch": "vitest --watch",
   "test:ui": "vitest --ui",
   "coverage": "vitest run --coverage",
-      "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+  "lint": "eslint .",
+  "lint:fix": "eslint . --fix"
 },
     "dependencies": {
         "@tanstack/react-query": "^5.90.2",
@@ -23,6 +23,7 @@
         "zod": "^4.1.11"
     },
     "devDependencies": {
+        "@eslint/js": "^9.36.0",
         "@testing-library/jest-dom": "^6.8.0",
         "@testing-library/react": "^16.3.0",
         "@testing-library/user-event": "^14.6.1",
@@ -30,8 +31,12 @@
         "@types/react-dom": "^18.3.7",
         "@vitejs/plugin-react": "^5.0.3",
         "@vitest/coverage-v8": "^3.2.4",
+        "eslint": "^9.36.0",
+        "eslint-plugin-react": "^7.37.5",
+        "eslint-plugin-react-hooks": "^5.2.0",
         "jsdom": "^27.0.0",
         "typescript": "^5.9.2",
+        "typescript-eslint": "^8.45.0",
         "vite": "^5.4.20",
         "vitest": "^3.2.4"
     }
