--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -2,23 +2,27 @@
     "name": "frontend",
     "private": true,
     "type": "module",
-"scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview --port 5174",
-  "test": "npm run lint && vitest",
-  "test:watch": "vitest --watch",
-  "test:ui": "vitest --ui",
-  "coverage": "vitest run --coverage",
-  "lint": "eslint .",
-  "lint:fix": "eslint . --fix"
-},
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview --port 5174",
+        "test": "npm run lint && vitest",
+        "test:watch": "vitest --watch",
+        "test:ui": "vitest --ui",
+        "coverage": "vitest run --coverage",
+        "lint": "eslint .",
+        "lint:fix": "eslint . --fix"
+    },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.1",
+        "@mui/material": "^7.3.4",
         "@tanstack/react-query": "^5.90.2",
         "@trpc/client": "^11.5.1",
         "@trpc/react-query": "^11.5.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-router-dom": "^7.9.3",
         "superjson": "^2.2.2",
         "zod": "^4.1.11"
     },
