--- a/src/cdk/package.json
+++ b/src/cdk/package.json
@@ -9,12 +9,20 @@
     "build": "tsc -p tsconfig.json",
     "watch": "tsc -w -p tsconfig.json",
     "prepare": "npm run build",
+
     "cdk": "cdk",
     "cdk:bootstrap": "npx cdk bootstrap",
     "cdk:synth": "npx cdk synth",
     "cdk:diff": "npx cdk diff",
-    "cdk:deploy": "npx cdk deploy --require-approval never",
-    "cdk:destroy": "npx cdk destroy --force"
+
+    "cdk:deploy:dev": "npm run build && npx cdk deploy --require-approval never -c stage=dev",
+    "cdk:deploy:beta": "npm run build && npx cdk deploy --require-approval never -c stage=beta",
+    "cdk:deploy:prod": "npm run build && ALLOW_PROD_DEPLOY=true npx cdk deploy --require-approval never -c stage=prod",
+
+    "cdk:destroy": "npx cdk destroy --force",
+    "cdk:destroy:dev": "npx cdk destroy --force -c stage=dev",
+    "cdk:destroy:beta": "npx cdk destroy --force -c stage=beta",
+    "cdk:destroy:prod": "npx cdk destroy --force -c stage=prod"
   },
   "dependencies": {
     "source-map-support": "^0.5.21"
