--- a/src/cdk/package.json
+++ b/src/cdk/package.json
@@ -9,16 +9,13 @@
     "build": "tsc -p tsconfig.json",
     "watch": "tsc -w -p tsconfig.json",
     "prepare": "npm run build",
-
     "cdk": "cdk",
     "cdk:bootstrap": "npx cdk bootstrap",
     "cdk:synth": "npx cdk synth",
     "cdk:diff": "npx cdk diff",
-
     "cdk:deploy:dev": "npm run build && npx cdk deploy --require-approval never -c stage=dev",
     "cdk:deploy:beta": "npm run build && npx cdk deploy --require-approval never -c stage=beta",
     "cdk:deploy:prod": "npm run build && ALLOW_PROD_DEPLOY=true npx cdk deploy --require-approval never -c stage=prod",
-
     "cdk:destroy": "npx cdk destroy --force",
     "cdk:destroy:dev": "npx cdk destroy --force -c stage=dev",
     "cdk:destroy:beta": "npx cdk destroy --force -c stage=beta",
@@ -30,6 +27,8 @@
   "devDependencies": {
     "@aws-cdk/aws-apigatewayv2-alpha": "^2.114.1-alpha.0",
     "@aws-cdk/aws-apigatewayv2-integrations-alpha": "^2.114.1-alpha.0",
+    "@swc/core": "^1.13.5",
+    "@swc/helpers": "^0.5.17",
     "@types/node": "^20.19.20",
     "aws-cdk": "^2.1030.0",
     "aws-cdk-lib": "^2.219.0",
