--- a/src/api/tsconfig.json
+++ b/src/api/tsconfig.json
@@ -2,13 +2,13 @@
   "compilerOptions": {
     "target": "ES2021",
     "module": "CommonJS",
-    "moduleResolution": "Node",
+    "moduleResolution": "node",
     "lib": ["es2021"],
     "strict": true,
     "esModuleInterop": true,
     "outDir": "dist",
     "rootDir": "src",
-    "skipLibCheck": true
+    "skipLibCheck": true,
   },
   "include": ["src"]
 }
