--- a/src/api/package.json
+++ b/src/api/package.json
@@ -17,6 +17,8 @@
     "@aws-sdk/client-s3": "^3.908.0",
     "@aws-sdk/client-ses": "^3.908.0",
     "@aws-sdk/client-sesv2": "^3.911.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.908.0",
+    "@aws-sdk/client-ses": "^3.908.0",
     "@trpc/server": "^10.45.2",
     "@types/cors": "^2.8.19",
     "cors": "^2.8.5",
