--- a/package.json
+++ b/package.json
@@ -33,13 +33,13 @@
     "clean": "rimraf node_modules src/**/node_modules src/cdk/cdk.out || true"
   },
   "devDependencies": {
-    "@rollup/rollup-win32-x64-msvc": "^4.52.4",
     "aws-sdk-client-mock": "^4.1.0",
     "concurrently": "^9.2.1",
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.3.3",
     "rimraf": "^6.0.1",
+    "rollup": "^4.52.4",
     "typescript": "^5.4.0"
   },
   "dependencies": {
