--- a/src/api/package.json
+++ b/src/api/package.json
@@ -26,6 +26,7 @@
     "@types/jest": "^29.5.14",
     "@types/node": "^20.11.30",
     "@types/supertest": "^2.0.16",
+    "aws-sdk-client-mock": "^4.1.0",
     "jest": "^29.7.0",
     "prettier": "^3.6.2",
     "supertest": "^6.3.4",
