created sign-up and sign-in pages with tests

--- a/package.json
+++ b/package.json
@@ -11,29 +11,24 @@
     "dev:frontend": "npm -w src/frontend run dev",
     "dev:api": "npm -w src/api run dev",
     "dev": "concurrently -k -n FRONTEND,API \"npm -w src/frontend run dev\" \"npm -w src/api run dev\"",
-
     "// build": "=============== BUILD ================",
     "build:frontend": "npm -w src/frontend run build",
     "build:api": "npm -w src/api run build",
     "build": "npm -w src/frontend run build && npm -w src/api run build",
-
     "// quality": "============= QUALITY ===============",
     "format": "prettier -w .",
     "lint": "eslint . --ext .ts,.tsx",
     "test:frontend": "npm -w src/frontend run test",
     "test:api": "npm -w src/api run test",
     "test": "npm -w src/api run test && npm -w src/frontend run test",
-
     "// start": "=============== START ===============",
     "start": "concurrently -k -n FRONTEND,API \"npm -w src/frontend run dev\" \"npm -w src/api run dev\"",
-
     "// cdk": "================= CDK =================",
     "bootstrap": "npm -w src/cdk run cdk:bootstrap",
     "synth": "npm -w src/cdk run cdk:synth",
     "diff": "npm -w src/cdk run cdk:diff",
     "deploy": "npm -w src/cdk run cdk:deploy",
     "destroy": "npm -w src/cdk run cdk:destroy",
-
     "// misc": "=============== MISC =================",
     "clean": "rimraf node_modules src/**/node_modules src/cdk/cdk.out || true"
   },
@@ -42,7 +37,10 @@
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.3.3",
-    "typescript": "^5.4.0",
-    "rimraf": "^6.0.1"
+    "rimraf": "^6.0.1",
+    "typescript": "^5.4.0"
+  },
+  "dependencies": {
+    "@mui/icons-material": "^7.3.4"
   }
 }
