--- a/src/api/package.json
+++ b/src/api/package.json
@@ -13,12 +13,13 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.908.0",
     "@aws-sdk/client-cognito-identity-provider": "^3.908.0",
+    "@aws-sdk/client-s3": "^3.908.0",
     "@aws-sdk/client-ses": "^3.908.0",
     "@trpc/server": "^10.45.2",
     "@types/cors": "^2.8.19",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "zod": "^4.1.12"
   },
