--- a/src/api/package.json
+++ b/src/api/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/client-s3": "^3.911.0",
     "@aws-sdk/client-ses": "^3.908.0",
     "@aws-sdk/client-sesv2": "^3.911.0",
+    "@aws-sdk/lib-dynamodb": "^3.921.0",
     "@aws-sdk/s3-request-presigner": "^3.911.0",
     "@aws-sdk/types": "^3.910.0",
     "@smithy/smithy-client": "^4.9.1",
