--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.DS_Store
+**/.DS_Store
+
 # IntelliJ IDEA
 .idea/
 *.iml
@@ -12,6 +15,3 @@ cdk.out
 .env.local
 .env.*.local
 
-.DS_Store
-src/frontend/src/.DS_Store
-DS_Store
