--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@aws-sdk/client-s3": "^3.908.0",
     "@mui/icons-material": "^7.3.4",
     "aws-jwt-verify": "^5.1.1",
+    "heic2any": "^0.0.4",
     "recharts": "^3.3.0",
     "rollup": "^4.52.4",
     "typescript": "^5.4.0"
