--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -22,6 +22,7 @@
     "@trpc/client": "^11.6.0",
     "@trpc/react-query": "^11.5.1",
     "framer-motion": "^12.23.24",
+    "heic2any": "^0.0.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.3",
