--- a/src/api/package.json
+++ b/src/api/package.json
@@ -9,6 +9,7 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/server.js",
+    "seed": "tsx src/seed.ts",
     "test": "jest --passWithNoTests --runInBand",
     "test:watch": "jest --watch"
   },
