changed from email to personal email to avoid NEU blocker, fixed deployment scripts

--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "bootstrap": "npm -w src/cdk run cdk:bootstrap",
     "synth": "npm -w src/cdk run cdk:synth",
     "diff": "npm -w src/cdk run cdk:diff",
-    "deploy:dev": "npx src/cdk deploy --all --require-approval never -c stage=dev",
-    "deploy:prod": "npx src/cdk deploy --all --require-approval never -c stage=prod",
+    "deploy:dev": "npm -w src/cdk run cdk:deploy:dev",
+    "deploy:prod": "npm -w src/cdk run cdk:deploy:prod",
     "destroy": "npm -w src/cdk run cdk:destroy",
     "// misc": "=============== MISC =================",
     "clean": "rimraf node_modules src/**/node_modules src/cdk/cdk.out || true"
