--- a/src/cdk/package.json
+++ b/src/cdk/package.json
@@ -13,9 +13,9 @@
     "cdk:bootstrap": "npx cdk bootstrap",
     "cdk:synth": "npx cdk synth",
     "cdk:diff": "npx cdk diff",
-    "cdk:deploy:dev": "npm run build && npx cdk deploy --require-approval never -c stage=dev",
-    "cdk:deploy:beta": "npm run build && npx cdk deploy --require-approval never -c stage=beta",
-    "cdk:deploy:prod": "npm run build && ALLOW_PROD_DEPLOY=true npx cdk deploy --require-approval never -c stage=prod",
+    "cdk:deploy:dev": "npm run build && npx cdk deploy --all --require-approval never -c stage=dev",
+    "cdk:deploy:beta": "npm run build && npx cdk deploy --all --require-approval never -c stage=beta",
+    "cdk:deploy:prod": "npm run build && ALLOW_PROD_DEPLOY=true npx cdk deploy --all --require-approval never -c stage=prod",
     "cdk:destroy": "npx cdk destroy --force",
     "cdk:destroy:dev": "npx cdk destroy --force -c stage=dev",
     "cdk:destroy:beta": "npx cdk destroy --force -c stage=beta",
